--- a/map-show.html
+++ b/map-show.html
@@ -110,6 +110,7 @@ http://localhost:5535/guaranty/zzz-startertest/static/map-show.html?carcode=8605
                     "<a href='#' onclick='previousPage()'>上一页</a>" +
                     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +
                     "<a href='#' onclick='nextPage()'>上一页</a>" +
+                    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" +
                     "<a href='https://cors-anywhere.herokuapp.com/' target=\"_blank\">cors-anywhere</a>\n" +
                 "</div>");
             return result;
